# pwpolynomials

./: LICENSE  README.md  pyproject.toml
src/pwpolynomials/: __init__.py  _codegen.py  coefshifters.py  leastsquares.py  rvfinders.py
